--- a/html/index.html
+++ b/html/index.html
@@ -41,21 +41,12 @@
                 </div>
                 <div class="col-2">
                     <h1 class='about-title'>About Me</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dicta sint nisi officiis ipsa nam
-                        fuga mollitia autem omnis quas repudiandae, laborum deserunt labore iure odit ullam quibusdam id
-                        animi!
-                        Vel natus molestiae sit, iste cumque soluta ratione saepe recusandae quam maxime eum,
-                        perferendis quo minima ad, est inventore. Repudiandae laudantium voluptate tempore, laboriosam
-                        sunt possimus et magni tenetur doloremque.
-                        Debitis officiis reprehenderit magnam minus asperiores, alias at illum voluptate dolorem
-                        architecto maxime quam sapiente! Eveniet commodi beatae nam quibusdam voluptas reprehenderit
-                        explicabo incidunt, veritatis dicta, voluptatibus dolores nisi ducimus!
-                        Accusamus ad cumque, nobis odio quae ab delectus dolorum explicabo alias, a doloribus fuga porro
-                        magni facere, placeat doloremque? A nihil inventore facere nulla libero maiores aut illo aperiam
-                        dolores!
-                        Voluptatum nihil eligendi sed dolore impedit quisquam perferendis totam pariatur quis
-                        voluptates, id, quaerat corrupti accusantium esse alias, nisi odit eveniet dolor mollitia at.
-                        Nobis quas deserunt fugiat aliquid ipsam!</p>
+                    <p>With a passion for full-stack development, I am a proficient developer capable of designing and
+                        developing complex applications with expertise in JavaScript, Nodejs and Python. Earlier, I
+                        served as a Merchant Navy officer in NYK Line, Japan.It was my childhood dream to become a
+                        developer and for the last two years I have been learnig and grinding myself in this continously
+                        growing field. It would be my pleasure to work with such a reputed company and I assure you that
+                        I'll give my best.</p>
                     <div class="title-tab">
                         <div class="tab-link active-link" onclick="showContent('skills')">skills</div>
                         <div class="tab-link" onclick="showContent('experience')">experience</div>
@@ -63,23 +54,45 @@
                     </div>
                     <div class="tab-content active-content" id="skills">
                         <ul>
-                            <li><span>frontEnd</span><br>how to do frontend</li>
-                            <li><span>Design</span><br>how to do designing</li>
-                            <li><span>backEnd</span><br>how to do backend</li>
+                            <li><span>Languages:</span><br>
+                                <ol>
+                                    <li>
+                                        Adobe Photoshop
+                                    </li>
+                                    <li>
+                                        C , C++
+                                    </li>
+                                    <li>
+                                        HTML , CSS
+                                    </li>
+                                    <li>
+                                        JavaScript , NodeJs , ExpressJs
+                                    </li>
+                                    <li>
+                                        PYTHON
+                                    </li>
+                                    <li>
+                                        PHP
+                                    </li>
+                                    <li>
+                                        MYSql , MongoDB
+                                    </li>
+                                </ol>
+                            </li>
                         </ul>
                     </div>
                     <div class="tab-content" id="experience">
                         <ul>
-                            <li><span>experience</span><br>how to do frontend</li>
-                            <li><span>experience</span><br>how to do designing</li>
-                            <li><span>experience</span><br>how to do backend</li>
+                            <li><span>Projects in C++:</span><br>Railway ticket booking system <br>Quiz using C</li>
+                            <li><span>Projects in JS</span><br>Various basic and advanced ones</li>
+                            <li><span>Projects in Node,Express,JS, MongoDB</span><br>Fully dynamic website</li>
                         </ul>
                     </div>
                     <div class="tab-content" id="education">
                         <ul>
-                            <li><span>bsc in nautical science</span><br>2013-2017, TMI,pune</li>
-                            <li><span>MBA in IT</span><br>2021-2023, manipal jaipur</li>
-                            <li><span>internship/diploma in it</span><br>2022-2023, IANT sikar</li>
+                            <li><span>Bsc in nautical science</span><br>2013-2017, TMI,Pune</li>
+                            <li><span>MBA in IT</span><br>2021-2023, Manipal University, Jaipur</li>
+                            <li><span>Internship/diploma in IT</span><br>2022-2023, IANT, Sikar</li>
                         </ul>
                     </div>
                 </div>
@@ -94,26 +107,20 @@
                 <div>
                     <i class="fa-solid fa-code"></i>
                     <h3>Web Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto perferendis repudiandae
-                        quidem quasi quos quae minus dignissimos. Non, officia quam cumque ab totam consequuntur maxime
-                        sunt commodi saepe, accusamus necessitatibus?</p>
-                    <a href="">learn more</a>
+                    <p>With the knowledge of Adobe Photoshop I can carry out the work of designing the templates</p>
+                    <!-- <a href="">learn more</a> -->
                 </div>
                 <div>
                     <i class="fa-solid fa-crop"></i>
                     <h3>Backend Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto perferendis repudiandae
-                        quidem quasi quos quae minus dignissimos. Non, officia quam cumque ab totam consequuntur maxime
-                        sunt commodi saepe, accusamus necessitatibus?</p>
-                    <a href="">learn more</a>
+                    <p>Being a Maths student , I am always ready and eager to solve the problems using the logics.</p>
+                    <!-- <a href="">learn more</a> -->
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store-ios"></i>
                     <h3>Frontend Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto perferendis repudiandae
-                        quidem quasi quos quae minus dignissimos. Non, officia quam cumque ab totam consequuntur maxime
-                        sunt commodi saepe, accusamus necessitatibus?</p>
-                    <a href="">learn more</a>
+                    <p>With the backend, I can assure one that my frontend skills are also good and I am continously improving the same.</p>
+                    <!-- <a href="">learn more</a> -->
                 </div>
             </div>
 
@@ -125,12 +132,10 @@
             <h1 class="title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="photo/w1.jpg" alt="">
+                    <img src="photo/w1.png" alt="">
                     <div class="layer">
-                        <h3>social media app</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nisi, dignissimos sit
-                            corporis quia placeat et quos modi minus harum tenetur, repellat earum, perferendis ad!
-                            Ducimus, cupiditate ab! Quasi, nesciunt.</p>
+                        <h3>Weather app</h3>
+                        <p>Created nodejs weather app using JS,nodejs,API. The app is dynamic in nature</p>
                         <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -138,19 +143,15 @@
                     <img src="photo/w2.jpg" alt="">
                     <div class="layer">
                         <h3>Music app</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nisi, dignissimos sit
-                            corporis quia placeat et quos modi minus harum tenetur, repellat earum, perferendis ad!
-                            Ducimus, cupiditate ab! Quasi, nesciunt.</p>
+                        <p>Created a music player using HTML , CSS  and JavaScript</p>
                         <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="photo/w3.jpg" alt="">
+                    <img src="photo/w3.png" alt="">
                     <div class="layer">
                         <h3>Search app</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nisi, dignissimos sit
-                            corporis quia placeat et quos modi minus harum tenetur, repellat earum, perferendis ad!
-                            Ducimus, cupiditate ab! Quasi, nesciunt.</p>
+                        <p>Created Dino game using Adobe Photoshop, HTML, JS</p>
                         <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -174,7 +175,7 @@
                         <a href="https://www.instagram.com/?hl=en"><i class="fa-brands fa-square-instagram fa-spin"
                                 style="color: #d74747;"></i></a>
                     </div>
-                    <a href="" class="btn btn2">Download CV</a>
+                    <a href="photo/portfolio1.pdf" class="btn btn2" download="">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form onsubmit="sendEmail(); reset(); return false;">
