--- a/html/index.html
+++ b/html/index.html
@@ -175,7 +175,7 @@
                         <a href="https://www.instagram.com/?hl=en"><i class="fa-brands fa-square-instagram fa-spin"
                                 style="color: #d74747;"></i></a>
                     </div>
-                    <a href="photo/portfolio1.pdf" class="btn btn2" download="">Download CV</a>
+                    <a href="photo/Resume_HimanshuSharma.pdf" class="btn btn2" download="">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form onsubmit="sendEmail(); reset(); return false;">
